# BassEmulatorVST

./: .gitignore  CLAUDE.md  CMakeLists.txt  ML_IDEAS.md  README.md  ROADMAP.md  pyproject.toml
ml/: import_dataset.py  losses.py  process_audio.py  slice_dataset.py  train.py  train_config.py  transforms.py
ml/configs/: train_v0.json
ml/nn_architectures/: __init__.py  bassnet.py  dilated.py
src/: EnvelopeFollower.h  OnsetDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  YinPitchDetector.h
