[project]
name = "bassemulator-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Falkodem",email = "dimbatsula@gmail.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "soundfile (>=0.13.1,<0.14.0)",
    "scipy (<1.14)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "setuptools (<82)"
]

[tool.poetry.group.train.dependencies]
torch       = ">=2.0"
tqdm        = ">=4.0"
tensorboard = ">=2.13"

# Install on Ubuntu with: poetry install --with train

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false
